--- a/index.html
+++ b/index.html
@@ -22,5 +22,20 @@
 </tr>
 
 <script src="script.js" defer></script>
+
+<script>
+//a, b, c;   
+a = 5;          
+    b = 6;          
+    c = 8;
+    d = a + b + c
+    console.log(d);
+
+</script>
+
+
+
+
+
 </body>
 </html>
